# mikrotik

./: .gitignore  .mcp.json  README.md  package.json
.codex/: config.toml
.github/workflows/: release.yml
app/: CHANGELOG.md  index.html  mcp-smoke.mjs  package.json  vite.config.js
app/.changes/: 260716-1341.md  260716-1406.md  260717-1346.md  260717-2001.md  260718-1800.md  260720-1800.md  260721-0908.md  260721-1759.md  260722-1001.md  260723-1045.md  260723-1058.md  260723-1110.md  260723-1725.md
app/src/: App.vue  agent-gateway.js  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  routeros.rs
app/src/composables/: use-acp-agent.js  use-agent.js
app/src/tool/: catalog.js  journal-store-node.js  journal-store-tauri.js  omlx-config-node.js  prompt.js  transport-cli.js  transport-tauri.js
backups/: routeros-current.rsc
scripts/: cleanup_efes_md.sh  fix_mikrotik.py  observe_wan_outage.sh  wan_chart.py  wan_monitor.py  wan_router_log.py  wan_speed.py  wan_toggle.py
