[package]
name = "wan-monitor-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wan_monitor_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-agent = { git = "https://github.com/nitra/tauri-components", rev = "75f557370cb6c1eb16e76c67a146676153024ee6" }
tauri-plugin-mcp-bridge = "0.11.2"
regex = "1"
md-5 = "0.10"
chrono = { version = "0.4", features = ["clock"] }

